--- a/manifest.json
+++ b/manifest.json
@@ -48,7 +48,6 @@
       "matches": [
         "https://*.e-kreta.hu/Hianyzas/Hianyzasok*"
       ],
-      "js": ["absences/absences.js"],
       "css": ["absences/absences.css"],
       "run_at": "document_start"
     },
@@ -56,7 +55,6 @@
       "matches": [
         "https://idp.e-kreta.hu/Account/Logout*"
       ],
-      "js": ["logout/logout.js"],
       "css": ["logout/logout.css"],
       "run_at": "document_start"
     },
@@ -64,7 +62,6 @@
       "matches": [
         "https://*.e-kreta.hu/Adminisztracio/BelepesKezelo*"
       ],
-      "js": ["roleselect/roleselect.js"],
       "css": ["roleselect/roleselect.css"],
       "run_at": "document_start"
     },
@@ -72,7 +69,6 @@
       "matches": [
         "https://*.e-kreta.hu/Adminisztracio/ElfelejtettJelszo*"
       ],
-      "js": ["forgotpassword/forgotpassword.js"],
       "css": ["forgotpassword/forgotpassword.css"],
       "run_at": "document_start"
     },
@@ -80,7 +76,6 @@
       "matches": [
         "https://*.e-kreta.hu/Intezmeny/Faliujsag*"
       ],
-      "js": ["dashboard/dashboard.js"],
       "css": ["dashboard/dashboard.css"],
       "run_at": "document_start"
     },
@@ -88,7 +83,6 @@
       "matches": [
         "https://*.e-kreta.hu/TanuloErtekeles/Osztalyzatok*"
       ],
-      "js": ["grades/grades.js", "grades/chart.js"],
       "css": ["grades/grades.css"],
       "run_at": "document_start"
     },
@@ -96,7 +90,6 @@
       "matches": [
         "https://*.e-kreta.hu/Orarend/InformaciokOrarend*"
       ],
-      "js": ["timetable/timetable.js"],
       "css": ["timetable/timetable.css"],
       "run_at": "document_start"
     },
@@ -104,7 +97,6 @@
       "matches": [
         "https://*.e-kreta.hu/Adminisztracio/Profil*"
       ],
-      "js": ["profile/profile.js"],
       "css": ["profile/profile.css"],
       "run_at": "document_start"
     },
@@ -112,9 +104,71 @@
       "matches": [
         "https://*.e-kreta.hu/Tanulo/TanuloHaziFeladat*"
       ],
-      "js": ["homework/homework.js"],
       "css": ["homework/homework.css"],
       "run_at": "document_start"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Hianyzas/Hianyzasok*"
+      ],
+      "js": ["absences/absences.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://idp.e-kreta.hu/Account/Logout*"
+      ],
+      "js": ["logout/logout.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Adminisztracio/BelepesKezelo*"
+      ],
+      "js": ["roleselect/roleselect.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Adminisztracio/ElfelejtettJelszo*"
+      ],
+      "js": ["forgotpassword/forgotpassword.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Intezmeny/Faliujsag*"
+      ],
+      "js": ["dashboard/dashboard.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/TanuloErtekeles/Osztalyzatok*"
+      ],
+      "js": ["grades/grades.js", "grades/chart.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Orarend/InformaciokOrarend*"
+      ],
+      "js": ["timetable/timetable.js"],
+      "run_at": "documen_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Adminisztracio/Profil*"
+      ],
+      "js": ["profile/profile.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://*.e-kreta.hu/Tanulo/TanuloHaziFeladat*"
+      ],
+      "js": ["homework/homework.js"],
+      "run_at": "document_end"
     }
   ]
 }
